--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -8,7 +8,7 @@ header {
 
   gap: 70px;
 }
-header .logo-container{
+header .logo-container {
   background-color: black;
   padding: 24px;
   width: 100%;
@@ -17,10 +17,10 @@ header .logo-container{
   align-items: center;
   justify-content: center;
 }
-header .logo-container img{
+header .logo-container img {
   height: 60px;
 }
-header .text-container{
+header .text-container {
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
@@ -28,14 +28,14 @@ header .text-container{
   max-width: 80%;
   margin: 0 auto;
 }
-header .text-container h1{
-  font-size: 34px;
-  color: var(--dark-grey);
+header .text-container h1 {
+  font-size: 38px;
+  color: var(--dark-gray);
 }
-header .text-container p{
-  color: var(--light-grey);
+header .text-container p {
+  color: var(--dark-gray);
 }
-header .text-container .heading{
+header .text-container .heading {
   display: flex;
   align-items: flex-start;
   justify-content: flex-start;
@@ -44,8 +44,8 @@ header .text-container .heading{
   margin-bottom: 24px;
   gap: 14px;
 }
-header .text-container .heading .heading-border{
+header .text-container .heading .heading-border {
   height: 12px;
   width: 35%;
-  background-color: var(--dark-grey);
+  background-color: var(--dark-gray);
 }
