--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,41 +1,43 @@
-*{
-  font-family: 'Gotham';
+* {
+  font-family: "Gotham";
   box-sizing: border-box;
   margin: 0;
   padding: 0;
 }
-body{
+body {
   width: 100%;
   height: 100%;
 }
-:root{
-  --dark-grey: #333333;
-  --light-grey: #808080;
-  --yellow: #FFB612;
+:root {
+  --dark-gray: #333333;
+  --light-gray: #808080;
+  --light-text: #f0f0f0;
+  --medium-text: #9c9c9c;
+  --yellow: #ffb612;
   --red: #dc0a17;
-  --green: #2FC022;
+  --green: #2fc022;
 }
 @font-face {
-  font-family: 'Gotham';
-  src: url('assets/fonts/Gotham/gotham-light.woff2') format('truetype');
+  font-family: "Gotham";
+  src: url("assets/fonts/Gotham/gotham-light.woff2") format("truetype");
   font-weight: 300;
   font-style: normal;
 }
 @font-face {
-  font-family: 'Gotham';
-  src: url('assets/fonts/Gotham/gotham-book.woff2') format('truetype');
+  font-family: "Gotham";
+  src: url("assets/fonts/Gotham/gotham-book.woff2") format("truetype");
   font-weight: 500;
   font-style: normal;
 }
 @font-face {
-  font-family: 'Gotham';
-  src: url('assets/fonts/Gotham/gotham-bold.woff2') format('truetype');
+  font-family: "Gotham";
+  src: url("assets/fonts/Gotham/gotham-bold.woff2") format("truetype");
   font-weight: 700;
   font-style: normal;
 }
 @font-face {
-  font-family: 'Gotham';
-  src: url('assets/fonts/Gotham/gotham-black.woff2') format('truetype');
+  font-family: "Gotham";
+  src: url("assets/fonts/Gotham/gotham-black.woff2") format("truetype");
   font-weight: 900;
   font-style: normal;
 }
