--- a/src/app/components/forms/forms.component.html
+++ b/src/app/components/forms/forms.component.html
@@ -1,31 +1,33 @@
-<form action="" class="form-group">
+<form action="" class="form-group" [formGroup]="formGroup">
   <div class="form-icon">
     <img src="assets/images/png/icon-hour.png">
     Horário
   </div>
   <h3>Qual período quer treinar?</h3>
   <div class="radio-wrapper">
-    <input type="radio" name="morning" value="morning">
+    <input type="radio" name="hour" value="morning" formControlName="hour">
     <label for="morning">Manhã</label>
     <span>06:00 às 12:00</span>
   </div>
   <div class="radio-wrapper">
-    <input type="radio" name="afternoon" value="afternoon">
+    <input type="radio" name="hour" value="afternoon" formControlName="hour">
     <label for="afternoon">Tarde</label>
     <span>12:01 às 18:00</span>
   </div>
   <div class="radio-wrapper">
-    <input type="radio" name="night" value="night">
+    <input type="radio" name="hour" value="night" formControlName="hour">
     <label for="night">Noite</label>
     <span>18:01 às 23:00</span>
   </div>
-  <div class="checkbox-show-closed">
-    <input name="show-closed" type="checkbox">
-    <label for="show-closed">Exibir unidades fechadas</label>
+  <div class="checkbox-wrapper">
+    <div class="checkbox">
+      <input name="show-closed" type="checkbox" formControlName="showClosed">
+      <label for="show-closed">Exibir unidades fechadas</label>
+    </div>
     <span>Resultados encontrados: {{results.length}}</span>
   </div>
   <div class="button-wrapper">
-    <button class="btn btn-primary">Encontrar unidade</button>
-    <button class="btn btn-secundary">Limpar</button>
+    <button class="btn btn-primary" (click)="onSubmit()">Encontrar unidade</button>
+    <button class="btn btn-secundary" (click)="onClean()">Limpar</button>
   </div>
 </form>
