--- a/src/app/components/forms/forms.component.html
+++ b/src/app/components/forms/forms.component.html
@@ -24,7 +24,7 @@
       <input name="show-closed" type="checkbox" formControlName="showClosed">
       <label for="show-closed">Exibir unidades fechadas</label>
     </div>
-    <span>Resultados encontrados: {{results.length}}</span>
+    <span>Resultados encontrados: {{filteredResults.length}}</span>
   </div>
   <div class="button-wrapper">
     <button class="btn btn-primary" (click)="onSubmit()">Encontrar unidade</button>
