--- a/src/app/components/forms/forms.component.scss
+++ b/src/app/components/forms/forms.component.scss
@@ -41,6 +41,7 @@
   gap: 10px;
   position: relative;
   color: var(--medium-text);
+  accent-color: var(--yellow);
 }
 .form-group .radio-wrapper span {
   position: absolute;
@@ -85,6 +86,7 @@
 }
 .form-group .checkbox-wrapper input[type="checkbox"] {
   margin-right: 5px;
+  accent-color: var(--yellow);
 }
 @media (min-width: 768px) {
   .form-group .button-wrapper {
